out/old/manifests/event-management/Deployment.event-manage-be.yaml
metadata:
  name: event-manage-be
  namespace: event-management
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"event-management:event-manage-be","ingressName":"event-management:event-manage-ingress","hostname":"<DOMAIN_555>.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-manage-be
  template:
    metadata:
      labels:
        app: event-manage-be
    spec:
      containers:
      - name: event-manage-be
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/event-management/backend:14
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
