out/old/manifests/event-management/StatefulSet.event-manage-db.yaml
metadata:
  name: event-manage-db
  namespace: event-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-manage-db
  template:
    metadata:
      labels:
        app: event-manage-db
    spec:
      containers:
      - name: event-manage-db
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/mysql:5.6
        args:
        - --ignore-db-dir=lost+found
        ports:
        - name: event-manage-db
          containerPort: 3306
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: event-manage-db-data
          mountPath: /var/lib/mysql
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: event-manage-db-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: event-manage-db
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
