out/old/manifests/event-management/Service.event-manage-be.yaml
metadata:
  name: event-manage-be
  namespace: event-management
spec:
  ports:
  - name: be-port
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: event-manage-be
  clusterIP: <IP_62>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
