out/old/manifests/event-management/Service.event-manage-fe.yaml
metadata:
  name: event-manage-fe
  namespace: event-management
spec:
  ports:
  - name: fe-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: event-manage-fe
  clusterIP: <IP_63>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
